--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -23,15 +23,15 @@
 
   <body id="myPage">
     <!-- Sidebar on click -->
-<nav class="w3-sidebar w3-bar-block w3-white w3-card w3-animate-left w3-xlarge" style="display:none;z-index:2" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright close-button">Close
+<nav class="w3-sidebar w3-bar-block w3-white w3-card w3-animate-left w3-xxlarge" style="display:none;z-index:2" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright w3-text-teal">Close
     <i class="fa fa-remove"></i>
   </a>
-  <a href="#" class="w3-bar-item w3-button">Schematic Design</a>
-  <a href="#" class="w3-bar-item w3-button">Design Development</a>
-  <a href="#" class="w3-bar-item w3-button">Construction Documents</a>
-  <a href="#" class="w3-bar-item w3-button">Bidding/negotiating</a>
-  <a href="#" class="w3-bar-item w3-button">Contract Administration</a>
+  <a href="#service1.html" class="w3-bar-item w3-button">Schematic Design</a>
+  <a href="#service2.html" class="w3-bar-item w3-button">Design Development</a>
+  <a href="#service3.html" class="w3-bar-item w3-button">Construction Documents</a>
+  <a href="#service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
+  <a href="#service5.html" class="w3-bar-item w3-button">Contract Administration</a>
 </nav>
 
 <!-- Navbar -->
@@ -83,15 +83,15 @@
   <div class="hero-content w3-display-bottomleft">  
     <h1>CLIMATE ACTION THROUGH DESIGN</h1>
     <h2>Our Strategies Are Transforming the Built Environment for a Net Carbon Future!</h1>
-    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-theme hero-button">LEARN MORE</button>
+    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-theme w3-hover-teal hero-button">LEARN MORE</button>
   </div>
 </div>
 
 <!-- Modal -->
 <div id="id01" class="w3-modal">
   <div class="w3-modal-content w3-card-4 w3-animate-top">
-    <header class="w3-container w3-display-container modal-header"> 
-      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright close-button"><i class="fa fa-remove"></i></span>
+    <header class="w3-container w3-display-container"> 
+      <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-teal w3-display-topright"><i class="fa fa-remove"></i></span>
       <h1>We are creating a better world through the power of design.</h1>
     </header>
     <div class="w3-container">
@@ -99,7 +99,7 @@
       <p>Michelangler is a global architecture, design, and planning firm with 53 locations across Asia, Europe, Australia, the Middle East, and the Americas. Every day we impact millions of people’s lives with the spaces we create, which is why people are at the center of everything we do. Designing for the human experience is what allows us to tackle the toughest challenges facing cities and shape a more resilient and equitable future for everyone.</p>
       <p>Addressing the built environment’s impact on climate change is both a moral and business imperative. At Gensler, our goal is to make all the buildings we design net carbon zero by 2030. Explore our strategies for designing a resilient and equitable future. Our portfolio is already designed to save over 17 million metric tons of CO2 from being emitted on a yearly basis. But there’s still so much more work to do — and it can’t be done without the help of our clients, colleagues, and industry. Our mission is to transform the built environment for a net zero future with every project, in every location, and for every person.</p>
     </div>
-    <footer class="w3-container modal-footer">
+    <footer class="w3-container w3-teal">
       <p>Modal footer</p>
     </footer>
   </div>
