--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -27,11 +27,11 @@
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright close-button">Close
     <i class="fa fa-remove"></i>
   </a>
-  <a href="#" class="w3-bar-item w3-button">Schematic Design</a>
-  <a href="#" class="w3-bar-item w3-button">Design Development</a>
-  <a href="#" class="w3-bar-item w3-button">Construction Documents</a>
-  <a href="#" class="w3-bar-item w3-button">Bidding/negotiating</a>
-  <a href="#" class="w3-bar-item w3-button">Contract Administration</a>
+  <a href="#service1.html" class="w3-bar-item w3-button">Schematic Design</a>
+  <a href="#service2.html" class="w3-bar-item w3-button">Design Development</a>
+  <a href="#service3.html" class="w3-bar-item w3-button">Construction Documents</a>
+  <a href="#service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
+  <a href="#service5.html" class="w3-bar-item w3-button">Contract Administration</a>
 </nav>
 
 <!-- Navbar -->
