--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -32,11 +32,11 @@
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button dropdown-button current-page" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <a href="#service1.html" class="w3-bar-item w3-button current-page">Schematic Design</a>
-      <a href="#service2.html" class="w3-bar-item w3-button">Design Development</a>
-      <a href="#service3.html" class="w3-bar-item w3-button">Construction Documents</a>
-      <a href="#service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
-      <a href="#service5.html" class="w3-bar-item w3-button">Contract Administration</a>
+      <a href="service1.html" class="w3-bar-item w3-button current-page">Schematic Design</a>
+      <a href="service2.html" class="w3-bar-item w3-button">Design Development</a>
+      <a href="service3.html" class="w3-bar-item w3-button">Construction Documents</a>
+      <a href="service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
+      <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
     </div>
   </div>
   <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
@@ -102,207 +102,6 @@
     </p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">We Want to Be the Example for a More Diverse and Inclusive World.</h3>
     <p>Michelangler is committed to driving change across the design industry, our client relationships, and the cities where we live, work, and play. We are dedicated to leading this change by starting from within. Two years since we launched our Strategies to Fight Racism, we continue to evolve our diversity, equity, and inclusion efforts, taking on an ever more localized approach in each of our communities. From partnering with our clients in designing equitable spaces, to creating opportunities in our industry for diverse talent, we have made measurable progress on all fronts and continue to take action to create purposeful, inclusive, and resilient spaces for everyone.</p>
-  </div>
-
-  <!-- Project Section -->
-  <div class="w3-container w3-padding-32" id="project">
-    <h2 class="w3-center">FEATURED PROJECTS</h2>
-  </div>
-  <!-- Slideshow -->
-  <div class="w3-container">
-    <div class="w3-display-container mySlides">
-      <img src="images/gallery1.jpg" class="gallery"/>
-      <div class="w3-display-topleft w3-container w3-padding-32">
-        <span class="w3-white w3-padding-large w3-animate-bottom">15 Laight Street, New York, NY</span>
-      </div>
-    </div>
-    <div class="w3-display-container mySlides">
-      <img src="images/gallery2.jpg" class="gallery"/>
-      <div class="w3-display-middle w3-container w3-padding-32">
-        <span class="w3-white w3-padding-large w3-animate-bottom">The Lighthouse, South San Francisco, CA</span>
-      </div>
-    </div>
-    <div class="w3-display-container mySlides">
-      <img src="images/gallery3.jpg" class="gallery"/>
-      <div class="w3-display-topright w3-container w3-padding-32">
-        <span class="w3-white w3-padding-large w3-animate-bottom">Loffler Companies, St. Louis Park, MN</span>
-      </div>
-    </div>
-
-    <!-- Slideshow next/previous buttons -->
-    <div class="w3-container w3-dark-grey w3-padding w3-xlarge">
-      <div class="w3-left" onclick="plusDivs(-1)">
-        <i class="fa fa-arrow-circle-left w3-hover-text-teal"></i>
-      </div>
-      <div class="w3-right" onclick="plusDivs(1)">
-        <i class="fa fa-arrow-circle-right w3-hover-text-teal"></i>
-      </div>
-      <div class="w3-center">
-        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-        <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-      </div>
-    </div>
-  </div>
-  <h2 class="w3-center w3-padding-32">ALL PROJECTS BY FILTER</h2>
-  <div class="w3-row-padding ">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Commercial</div>
-        <a href="#gallery-1" class="btn-gallery">
-          <img src="images/commercial1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Residential</div>
-        <a href="#gallery-2" class="btn-gallery">
-          <img src="images/residential1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Sustainable</div>
-        <a href="#gallery-3" class="btn-gallery">
-          <img src="images/sustainable1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Industrial</div>
-        <a href="#gallery-4" class="btn-gallery">
-          <img src="images/industrial1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Conservation</div>
-        <a href="#gallery-5" class="btn-gallery">
-          <img src="images/conservation1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Landscape</div>
-        <a href="#gallery-6" class="btn-gallery">
-          <img src="images/landscape1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Urban</div>
-        <a href="#gallery-7" class="btn-gallery">
-          <img src="images/urban1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Interior</div>
-        <a href="#gallery-8" class="btn-gallery">
-          <img src="images/interior1.jpg" alt="" />
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="project-container">
-    <div id="gallery-1" class="hidden">
-      <a href="images/commercial1.jpg">Image 1</a>
-      <a href="images/commercial2.jpg">Image 2</a>
-      <a href="images/commercial3.jpg">Image 3</a>
-      <a href="images/commercial4.jpg">Image 4</a>
-    </div>
-    <div id="gallery-2" class="hidden">
-      <a href="images/residential1.jpg">Image 1</a>
-      <a href="images/residential2.jpg">Image 2</a>
-      <a href="images/residential3.jpg">Image 3</a>
-      <a href="images/residential4.jpg">Image 4</a>
-    </div>
-    <div id="gallery-3" class="hidden">
-      <a href="images/sustainable1.jpg">Image 1</a>
-      <a href="images/sustainable2.jpg">Image 2</a>
-      <a href="images/sustainable3.jpg">Image 3</a>
-      <a href="images/sustainable4.jpg">Image 4</a>
-    </div>
-    <div id="gallery-4" class="hidden">
-      <a href="images/industrial1.jpg">Image 1</a>
-      <a href="images/industrial2.jpg">Image 2</a>
-      <a href="images/industrial3.jpg">Image 3</a>
-      <a href="images/industrial4.jpg">Image 4</a>
-    </div>
-    <div id="gallery-5" class="hidden">
-      <a href="images/conservation1.jpg">Image 1</a>
-      <a href="images/conservation2.jpg">Image 2</a>
-      <a href="images/conservation3.jpg">Image 3</a>
-      <a href="images/conservation4.jpg">Image 4</a>
-    </div>
-    <div id="gallery-6" class="hidden">
-      <a href="images/landscape1.jpg">Image 1</a>
-      <a href="images/landscape2.jpg">Image 2</a>
-      <a href="images/landscape3.jpg">Image 3</a>
-      <a href="images/landscape4.jpg">Image 4</a>
-    </div>
-    <div id="gallery-7" class="hidden">
-      <a href="images/urban1.jpg">Image 1</a>
-      <a href="images/urban2.jpg">Image 2</a>
-      <a href="images/urban3.jpg">Image 3</a>
-      <a href="images/urban4.jpg">Image 4</a>
-    </div>
-    <div id="gallery-8" class="hidden">
-      <a href="images/interior1.jpg">Image 1</a>
-      <a href="images/interior2.jpg">Image 2</a>
-      <a href="images/interior3.jpg">Image 3</a>
-      <a href="images/interior4.jpg">Image 4</a>
-    </div>
-  </div>
-
-<!-- Work Row -->
-<div class="service w3-row-padding w3-padding-64 w3-theme-l1" id="service">
-
-  <div class="w3-quarter">
-  <h2>OUR SERVICES</h2>
-  <p class="service-content">We are an integrated, multidisciplinary design practice dedicated to creating places and spaces that elevate the human spirit and inspire human endeavors. We are inspired to design buildings and evolve space typologies to provide solutions to societal challenges and create stronger, more vibrant communities.</p>
-  </div>
-  
-  <div class="w3-quarter">
-  <div class="w3-card w3-white">
-    <img src="images/service1.jpg" style="width:100%">
-    <div class="w3-container">
-    <h3>Governmental</h3>
-    <p>Governmental architecture is typically used for public services such as civic buildings and other public works. Examples include the White House, state capitol buildings, courthouses, libraries, post offices, and public schools.</p>
-    </div>
-    </div>
-  </div>
-  
-  <div class="w3-quarter">
-  <div class="w3-card w3-white">
-    <img src="images/service2.jpg" style="width:100%">
-    <div class="w3-container">
-    <h3>Commercial</h3>
-    <p>Commercial architecture refers to buildings used by businesses and organizations for the purpose of conducting their activities. Examples of this type of architecture include office buildings, shopping centers, hotels, banks, airports, and hospitals.</p>
-    </div>
-    </div>
-  </div>
-  
-  <div class="w3-quarter">
-  <div class="w3-card w3-white">
-    <img src="images/service3.jpg" style="width:100%">
-    <div class="w3-container">
-    <h3>Domestic</h3>
-    <p>Domestic architecture is the design and construction of private residences. This type of architecture is more subdued than the commercial form and focuses more on creating comfortable, hospitable living spaces for individuals and families.</p>
-    </div>
-    </div>
-  </div>
   </div>
   
   <!-- Container -->
