--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -27,11 +27,11 @@
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-display-topright close-button">Close
     <i class="fa fa-remove"></i>
   </a>
-  <a href="#service1.html" class="w3-bar-item w3-button">Schematic Design</a>
-  <a href="#service2.html" class="w3-bar-item w3-button">Design Development</a>
-  <a href="#service3.html" class="w3-bar-item w3-button">Construction Documents</a>
-  <a href="#service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
-  <a href="#service5.html" class="w3-bar-item w3-button">Contract Administration</a>
+  <a href="service1.html" class="w3-bar-item w3-button">Schematic Design</a>
+  <a href="service2.html" class="w3-bar-item w3-button">Design Development</a>
+  <a href="service3.html" class="w3-bar-item w3-button">Construction Documents</a>
+  <a href="service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
+  <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
 </nav>
 
 <!-- Navbar -->
@@ -44,11 +44,11 @@
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button dropdown-button" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <a href="#service1.html" class="w3-bar-item w3-button">Schematic Design</a>
-      <a href="#service2.html" class="w3-bar-item w3-button">Design Development</a>
-      <a href="#service3.html" class="w3-bar-item w3-button">Construction Documents</a>
-      <a href="#service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
-      <a href="#service5.html" class="w3-bar-item w3-button">Contract Administration</a>
+      <a href="service1.html" class="w3-bar-item w3-button">Schematic Design</a>
+      <a href="service2.html" class="w3-bar-item w3-button">Design Development</a>
+      <a href="service3.html" class="w3-bar-item w3-button">Construction Documents</a>
+      <a href="service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
+      <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
     </div>
   </div>
   <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
@@ -64,11 +64,11 @@
     <div class="w3-dropdown-hover">
       <button class="w3-button" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-        <a href="#service1.html" class="w3-bar-item w3-button">Schematic Design</a>
-        <a href="#service2.html" class="w3-bar-item w3-button">Design Development</a>
-        <a href="#service3.html" class="w3-bar-item w3-button">Construction Documents</a>
-        <a href="#service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
-        <a href="#service5.html" class="w3-bar-item w3-button">Contract Administration</a>
+        <a href="service1.html" class="w3-bar-item w3-button">Schematic Design</a>
+        <a href="service2.html" class="w3-bar-item w3-button">Design Development</a>
+        <a href="service3.html" class="w3-bar-item w3-button">Construction Documents</a>
+        <a href="service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
+        <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
       </div>
     </div>
     <a href="#team" class="w3-bar-item w3-button">Team</a>
