--- a/yourSite/index.html
+++ b/yourSite/index.html
@@ -429,7 +429,7 @@
       <form class="w3-container w3-card-4 w3-padding-16 w3-white" method="get" name="contact_form" id="contact_form">
       <div class="w3-section">      
         <label>Name</label>
-        <input class="w3-input" type="text" name="name" id="name" autofocus>
+        <input class="w3-input" type="text" name="name" id="name">
       </div>
       <div class="w3-section">      
         <label>Email</label>
