--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -26,9 +26,9 @@
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-teal logo-diabled"><i class="fa fa-home w3-margin-right"></i>Michelangler</a>
-  <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
-  <a href="#project" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Projects</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-teal logo-diabled"><i class="fa fa-home w3-margin-right"></i>Michelangler</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Projects</a>
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button dropdown-button current-page" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
@@ -39,16 +39,16 @@
       <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
     </div>
   </div>
-  <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
-  <a href="#faq" class="w3-bar-item w3-button w3-hide-small w3-hover-white">FAQ</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">FAQ</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Search"><i class="fa fa-search"></i></a>
  </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button">About</a>
-    <a href="#project" class="w3-bar-item w3-button">Projects</a>
+    <a href="index.html" class="w3-bar-item w3-button">About</a>
+    <a href="index.html" class="w3-bar-item w3-button">Projects</a>
     <div class="w3-dropdown-hover">
       <button class="w3-button" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-card-4 w3-bar-block">
@@ -59,9 +59,9 @@
         <a href="#service5.html" class="w3-bar-item w3-button">Contract Administration</a>
       </div>
     </div>
-    <a href="#team" class="w3-bar-item w3-button">Team</a>
-    <a href="#faq" class="w3-bar-item w3-button">FAQ</a>
-    <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+    <a href="index.html" class="w3-bar-item w3-button">Team</a>
+    <a href="index.html" class="w3-bar-item w3-button">FAQ</a>
+    <a href="index.html" class="w3-bar-item w3-button">Contact</a>
     <a href="#" class="w3-bar-item w3-button">Search</a>
   </div>
 </div>
@@ -220,52 +220,6 @@
 </footer>
 
 <script>
-    // Slideshow
-    var slideIndex = 1;
-  showDivs(slideIndex);
-
-  function plusDivs(n) {
-    showDivs((slideIndex += n));
-  }
-
-  function currentDiv(n) {
-    showDivs((slideIndex = n));
-  }
-
-  function showDivs(n) {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("demodots");
-    if (n > x.length) {
-      slideIndex = 1;
-    }
-    if (n < 1) {
-      slideIndex = x.length;
-    }
-    for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none";
-    }
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" w3-white", "");
-    }
-    x[slideIndex - 1].style.display = "block";
-    dots[slideIndex - 1].className += " w3-white";
-  }
-
-
-  $(document).ready(function() {
-    $('a.btn-gallery').on('click', function(event) {
-      event.preventDefault();
-      var gallery = $(this).attr('href');
-      $(gallery).magnificPopup({
-        delegate: 'a',
-        type:'image',
-        gallery: {
-          enabled: true
-        }
-      }).magnificPopup('open');
-    });
-  });
 </script>
 
   </body>
